# sysmon_gui.cpp

./: .build.bat  .build_no_openssl.bat  .gitignore  API_REFERENCE.md  ARCHITECTURE_ESSENTIALS.md  ARCHITECTURE_ESSENTIALS_RU.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_GUIDE_RU.md  CMakeLists.txt  COMPONENT_GUIDE.md  COMPONENT_GUIDE_RU.md  CPP17_ESSENTIALS.md  CPP17_ESSENTIALS_RU.md  LICENSE  MVP_GUIDE.md  MVP_GUIDE_RU.md  QT6_ESSENTIALS.md  QT6_ESSENTIALS_RU.md  README.md  README_RU.md  SECURITY_GUIDE.md  sysmon.desktop  sysmon_agent.conf.example  sysmon_gui.conf.example
agent/: CMakeLists.txt  agentcore.cpp  agentcore.h  androidmanager.cpp  androidmanager.h  automationengine.cpp  automationengine.h  automationengine_backup.cpp  configmanager.cpp  configmanager.h  devicemanager.cpp  devicemanager.h  ipcserver.cpp  ipcserver.h  logger.cpp  logger.h  main.cpp  networkmanager.cpp  networkmanager.h  processmanager.cpp  processmanager.h  processmanager_backup.cpp  systemmonitor.cpp  systemmonitor.h  systemmonitor_backup.cpp
gui/: CMakeLists.txt  androidtab.cpp  androidtab.h  automationtab.cpp  automationtab.h  devicemanagertab.cpp  devicemanagertab.h  gui_config.cpp  gui_config.h  ipcclient.cpp  ipcclient.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  networkmanagertab.cpp  networkmanagertab.h  processmanagertab.cpp  processmanagertab.h  sysmon_gui.manifest  systemmonitortab.cpp  systemmonitortab.h
shared/: CMakeLists.txt  commands.cpp  commands.h  constants.h  ipcprotocol.cpp  ipcprotocol.h  logger.cpp  logger.h  security.cpp  security.h  serializer.cpp  serializer.h  systemtypes.cpp  systemtypes.h
